@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: wrappers.c,v 1.8 2005-07-06 23:00:52 achu Exp $
+ *  $Id: wrappers.c,v 1.9 2005-07-07 16:10:15 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -1069,6 +1069,103 @@ wrap_hash_destroy(WRAPPERS_ARGS, hash_t h)
 
   hash_destroy(h);
   return;
+}
+
+hostlist_t 
+wrap_hostlist_create(WRAPPERS_ARGS, const char *hostlist)
+{
+  hostlist_t rv;
+
+  assert(file && function);
+
+  if (!(rv = hostlist_create(hostlist)))
+    WRAPPERS_ERR_ERRNO("hostlist_create");
+
+  return rv;
+}
+
+void
+wrap_hostlist_destroy(WRAPPERS_ARGS, hostlist_t hl)
+{
+  assert(file && function);
+
+  if (!hl)
+    WRAPPERS_ERR_INVALID_PARAMETERS("hostlist_destroy");
+
+  hostlist_destroy(hl);
+  return;
+}
+
+void 
+wrap_hostlist_sort(WRAPPERS_ARGS, hostlist_t hl)
+{
+  assert(file && function);
+
+  if (!hl)
+    WRAPPERS_ERR_INVALID_PARAMETERS("hostlist_sort");
+
+  hostlist_sort(hl);
+  return;
+}
+
+void 
+wrap_hostlist_uniq(WRAPPERS_ARGS, hostlist_t hl)
+{
+ assert(file && function);
+
+  if (!hl)
+    WRAPPERS_ERR_INVALID_PARAMETERS("hostlist_uniq");
+
+  hostlist_uniq(hl);
+  return;
+}
+
+int 
+wrap_hostlist_push(WRAPPERS_ARGS, hostlist_t hl, const char *host)
+{
+  int rv;
+
+  assert(file && function);
+
+  if (!hl || !host)
+    WRAPPERS_ERR_INVALID_PARAMETERS("hostlist_push");
+
+  if (!(rv = hostlist_push(hl, host)))
+    WRAPPERS_ERR_ERRNO("hostlist_push");
+
+  return rv;
+}
+
+size_t 
+wrap_hostlist_ranged_string(WRAPPERS_ARGS, hostlist_t hl, size_t n, char *buf)
+{
+  size_t rv;
+
+  assert(file && function);
+
+  if (!hl || !buf || !(n > 0 || n <= INT_MAX))
+    WRAPPERS_ERR_INVALID_PARAMETERS("hostlist_ranged_string");
+
+  if ((rv = hostlist_ranged_string(hl, n, buf)) < 0)
+    WRAPPERS_ERR_ERRNO("hostlist_ranged_string");
+
+  return rv;
+}
+
+size_t 
+wrap_hostlist_deranged_string(WRAPPERS_ARGS, hostlist_t hl, size_t n, char *buf)
+{
+  size_t rv;
+
+  assert(file && function);
+
+  if (!hl || !buf || !(n > 0 || n <= INT_MAX))
+    WRAPPERS_ERR_INVALID_PARAMETERS("hostlist_deranged_string");
+
+  if ((rv = hostlist_deranged_string(hl, n, buf)) < 0)
+    WRAPPERS_ERR_ERRNO("hostlist_deranged_string");
+
+  return rv;
 }
 
 int 
