@@ -1,3 +1,9 @@
+2005-07-07  Albert Chu  <chu11@llnl.gov>
+
+	* Completed cerebro-stat tool.
+
+	* Added hostlist wrappers.
+	
 2005-07-06  Albert Chu  <chu11@llnl.gov>
 
 	* Continue work on cerebro-stat tool.
